--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
 #      - name: Push backend image
 #        if: github.ref == 'refs/heads/main'
 #        run: |
-#          SERVER_IMAGE_ID=ghcr.io/breadchris/sifty
+#          SERVER_IMAGE_ID=ghcr.io/justshare-io/justshare
 #
 #          # Change all uppercase to lowercase
 #          SERVER_IMAGE_ID=$(echo $SERVER_IMAGE_ID | tr '[A-Z]' '[a-z]')
