--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev:stream": "cd js && BASE_URL=https://breadchris.ngrok.io TARGETS=stream node esbuild.mjs",
     "dev:site": "cd js && BASE_URL=http://localhost:8000 TARGETS=site node esbuild.mjs",
     "dev:extension": "cd js && BASE_URL=http://localhost:8000 TARGETS=extension node esbuild.mjs",
-    "build": "cd js && BASE_URL=https://justshare.io BUILD=true node esbuild.mjs"
+    "build": "cd js && BASE_URL=https://justshare.io BUILD=true node esbuild.mjs",
+    "generate": "npm run generate:proto && npm run generate:wasm",
+    "generate:proto": "buf generate proto",
+    "generate:wasm": "GOOS=js GOARCH=wasm go build -o js/site/go.wasm pkg/wasm/main.go && cp $(go env GOROOT)/misc/wasm/wasm_exec.js js/site/wasm_exec.js"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
