--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "generate:wasm": "GOOS=js GOARCH=wasm go build -o js/site/go.wasm pkg/wasm/main.go && cp $(go env GOROOT)/misc/wasm/wasm_exec.js js/site/wasm_exec.js"
   },
   "dependencies": {
+    "@blocknote/core": "^0.11.2",
+    "@blocknote/react": "^0.11.2",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
     "@gitgraph/react": "^1.6.0",
