--- a/package.json
+++ b/package.json
@@ -19,26 +19,14 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
     "@gitgraph/react": "^1.6.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@mozilla/readability": "^0.5.0",
+    "@monaco-editor/react": "^4.6.0",
     "@react-spring/web": "^9.5.5",
     "@splidejs/react-splide": "^0.7.12",
     "@tailwindcss/typography": "^0.5.10",
-    "@tiptap/extension-blockquote": "^2.2.2",
-    "@tiptap/extension-bold": "^2.2.1",
-    "@tiptap/extension-code": "^2.2.2",
     "@tiptap/extension-code-block": "^2.2.2",
     "@tiptap/extension-code-block-lowlight": "^2.2.2",
-    "@tiptap/extension-dropcursor": "^2.2.2",
-    "@tiptap/extension-heading": "^2.2.2",
-    "@tiptap/extension-history": "^2.1.16",
-    "@tiptap/extension-image": "^2.2.2",
-    "@tiptap/extension-italic": "^2.2.1",
-    "@tiptap/extension-link": "^2.1.15",
-    "@tiptap/extension-strike": "^2.2.1",
-    "@tiptap/react": "^2.1.13",
-    "@tiptap/starter-kit": "^2.1.13",
-    "@tiptap/suggestion": "^2.2.1",
     "@uidotdev/usehooks": "^2.4.0",
     "@wixc3/react-board": "^2.3.0",
     "concurrently": "^8.2.2",
@@ -77,7 +65,8 @@
     "tailwindcss": "^3.3.6",
     "tippy.js": "^6.3.7",
     "typescript": "^5.2.2",
-    "vis-timeline": "^7.7.2"
+    "vis-timeline": "^7.7.2",
+    "vscode-lib": "^0.1.2"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.28.1",
