--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,9 +29,13 @@ jobs:
       - if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         run: exit 0
 
-      - name: Log into registry
-        if: github.ref == 'refs/heads/main'
-        run: echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push backend image
         if: github.ref == 'refs/heads/main'
